--- a/ExercicioContador/app/src/main/res/layout/activity_main.xml
+++ b/ExercicioContador/app/src/main/res/layout/activity_main.xml
@@ -6,28 +6,42 @@
     android:padding="16dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <EditText
-        android:id="@+id/edtNumero"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/zero"
+      android:id="@+id/txtNumero"
+      android:layout_gravity="center_horizontal"
+      android:layout_marginBottom="16dp"
+      android:textSize="60sp"
+      android:textColor="#00f"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="-"
-        android:onClick="subtrair"/>
+        android:text="@string/menos"
+        android:layout_weight="1"
+        android:onClick="subtrair"
+        android:background="#00f"
+        android:textColor="#fff"
+        android:textSize="30sp"/>
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="+"
-        android:onClick="somar"/>
+        android:text="@string/mais"
+        android:layout_weight="1"
+        android:onClick="somar"
+        android:background="#f00"
+        android:textColor="#fff"
+        android:textSize="30sp"/>
+
     </LinearLayout>
 
 </LinearLayout>
