--- a/ProjetoDialog/app/src/main/res/layout/activity_main.xml
+++ b/ProjetoDialog/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,12 @@
         android:onClick="abrirAlertComTimePickerDialog"/>
 
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/abrir_dialog_personalizado"
+        android:onClick="abrirDialogPersonalizado"/>
+
 
 
 
