--- a/Pizzaria/app/src/main/res/layout/activity_configuration.xml
+++ b/Pizzaria/app/src/main/res/layout/activity_configuration.xml
@@ -2,12 +2,22 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16sp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/voltar"
         android:onClick="voltar"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/numero_de_segundos_spash_screen"
+        android:textSize="20sp"></TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/insira_um_numero_de_3_a_30"></TextView>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,7 +32,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/salvar"
+        android:text="@string/recuperar"
         android:onClick="recuperar"/>
 
 </LinearLayout>
